--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       max-width: 900px;
       margin: auto;
       padding: 40px 20px;
+      text-align: center;
     }
 
     h1 {
@@ -33,8 +34,24 @@
 
     .card {
       border: 1px solid #222;
-      padding: 15px;
-      max-width: 300px;
+      padding: 20px;
+      max-width: 350px;
+      margin: 20px auto;
+      background: #141414;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.7);
+    }
+
+    .cover {
+      width: 100%;
+      border-radius: 8px;
+      margin-bottom: 15px;
     }
 
     button {
@@ -42,8 +59,17 @@
       background: #f2f2f2;
       color: #0d0d0d;
       border: none;
-      padding: 8px 12px;
+      padding: 10px 16px;
+      font-size: 16px;
       cursor: pointer;
+      border-radius: 6px;
+      transition: background 0.2s, color 0.2s;
+    }
+
+    button:hover {
+      background: #0d0d0d;
+      color: #f2f2f2;
+      border: 1px solid #f2f2f2;
     }
 
     a {
@@ -68,9 +94,11 @@
     <h2>Music</h2>
 
     <div class="card">
-      <strong>Too Late</strong><br />
-      $0.99<br />
-      <a href="https://delaguardia.gumroad.com/l/toolate?_gl=1*1otcoee*_ga*MjEzOTI4MzUyMS4xNzY3Mjc2MDA5*_ga_6LJN6D94N6*czE3NjcyNzYwMDgkbzEkZzEkdDE3NjcyNzg0NDMkajYwJGwwJGgw" target="_blank">
+      <!-- Replace the src below with your actual cover image URL -->
+      <img class="cover" src="https://via.placeholder.com/350x350.png?text=Sample+Pack+Cover" alt="Joaquin Sample Pack Vol. 1 Cover" />
+      <strong>Joaquin – Sample Pack Vol. 1 (WAV + MIDI)</strong><br />
+      $9.99<br />
+      <a href="https://delaguardia.gumroad.com/l/jspv1" target="_blank">
         <button>Buy</button>
       </a>
     </div>
@@ -82,3 +110,4 @@
   </div>
 </body>
 </html>
+
