--- a/index.html
+++ b/index.html
@@ -6,55 +6,90 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
       background: #0d0d0d;
       color: #f2f2f2;
+      line-height: 1.6;
     }
 
     .container {
-      max-width: 900px;
+      max-width: 960px;
       margin: auto;
-      padding: 40px 20px;
+      padding: 60px 20px;
     }
 
     h1 {
-      font-size: 48px;
-      margin-bottom: 10px;
-      letter-spacing: 2px;
+      font-size: 52px;
+      letter-spacing: 3px;
+      margin-bottom: 5px;
+    }
+
+    .subtitle {
+      opacity: 0.7;
+      margin-bottom: 60px;
     }
 
     h2 {
-      margin-top: 60px;
-      margin-bottom: 20px;
       font-weight: normal;
+      margin-bottom: 25px;
     }
 
     .card {
+      max-width: 360px;
       border: 1px solid #222;
-      padding: 15px;
-      max-width: 300px;
+      padding: 24px;
+      border-radius: 8px;
+      transition: transform 0.2s ease, border-color 0.2s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-4px);
+      border-color: #444;
+    }
+
+    .price {
+      opacity: 0.6;
+      margin-bottom: 12px;
+      display: block;
+    }
+
+    audio {
+      width: 100%;
+      margin: 15px 0;
     }
 
     button {
-      margin-top: 10px;
+      width: 100%;
       background: #f2f2f2;
       color: #0d0d0d;
       border: none;
-      padding: 8px 12px;
+      padding: 12px;
+      font-size: 14px;
+      font-weight: bold;
+      letter-spacing: 1px;
       cursor: pointer;
+      transition: opacity 0.2s ease;
     }
 
-    a {
-      color: inherit;
-      text-decoration: none;
+    button:hover {
+      opacity: 0.85;
     }
 
     footer {
-      margin-top: 80px;
-      font-size: 14px;
-      opacity: 0.5;
+      margin-top: 100px;
+      font-size: 13px;
+      opacity: 0.4;
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
     }
   </style>
 </head>
@@ -63,15 +98,21 @@
   <div class="container">
 
     <h1>QUINCHO</h1>
-    <p>DJ / Producer</p>
+    <div class="subtitle">DJ / Producer</div>
 
-    <h2>Music</h2>
+    <h2>Sample Pack</h2>
 
     <div class="card">
-      <strong>Joaquin – Sample Pack Vol. 1 (WAV + MIDI)</strong><br />
-      $9.99<br />
+      <strong>Joaquin – Sample Pack Vol. 1</strong>
+      <span class="price">$9.99 · WAV + MIDI</span>
+
+      <audio controls>
+        <source src="sample-pack-preview.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
+
       <a href="https://delaguardia.gumroad.com/l/jspv1" target="_blank">
-        <button>Buy</button>
+        <button>Buy Sample Pack</button>
       </a>
     </div>
 
