--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <title>Quincho</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Google Font (retro / analog feel) -->
+  <!-- Retro Font -->
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600&display=swap" rel="stylesheet">
 
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
 
     body {
       margin: 0;
@@ -20,6 +18,16 @@
       color: #f1f1f1;
       line-height: 1.6;
       letter-spacing: 0.3px;
+    }
+
+    body::after {
+      content: "";
+      position: fixed;
+      inset: 0;
+      background: url("grain.png");
+      opacity: 0.06;
+      pointer-events: none;
+      z-index: 999;
     }
 
     .container {
@@ -35,25 +43,12 @@
     }
 
     h2 {
-      margin-top: 80px;
+      margin-top: 90px;
       margin-bottom: 30px;
       font-weight: 400;
     }
 
-    p {
-      opacity: 0.75;
-    }
-
-    /* subtle grain overlay */
-    body::after {
-      content: "";
-      position: fixed;
-      inset: 0;
-      background-image: url("grain.png");
-      opacity: 0.05;
-      pointer-events: none;
-      z-index: 999;
-    }
+    p { opacity: 0.75; }
 
     .hero {
       display: grid;
@@ -64,22 +59,27 @@
 
     .hero img {
       width: 100%;
-      border-radius: 10px;
-      filter: contrast(1.05);
+      border-radius: 12px;
     }
 
     .card {
       border: 1px solid #222;
       padding: 28px;
-      border-radius: 10px;
+      border-radius: 12px;
+      background: rgba(255,255,255,0.015);
       max-width: 420px;
-      background: rgba(255,255,255,0.01);
+    }
+
+    .card img {
+      width: 100%;
+      border-radius: 8px;
+      margin-bottom: 15px;
     }
 
     .price {
       opacity: 0.6;
-      margin: 8px 0 14px;
       display: block;
+      margin: 8px 0 14px;
     }
 
     audio {
@@ -98,29 +98,14 @@
       cursor: pointer;
     }
 
-    button:hover {
-      opacity: 0.85;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-    }
+    button:hover { opacity: 0.85; }
 
     .socials a {
-      display: inline-block;
       margin-right: 20px;
       opacity: 0.7;
     }
 
-    .socials a:hover {
-      opacity: 1;
-    }
-
-    .email-box {
-      margin-top: 20px;
-    }
+    .socials a:hover { opacity: 1; }
 
     input[type="email"] {
       width: 100%;
@@ -131,17 +116,37 @@
       color: #fff;
     }
 
+    .video-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 30px;
+    }
+
+    .video {
+      position: relative;
+      padding-top: 56.25%;
+      border-radius: 12px;
+      overflow: hidden;
+      border: 1px solid #222;
+    }
+
+    .video iframe {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+    }
+
     footer {
       margin-top: 120px;
       font-size: 13px;
       opacity: 0.4;
     }
 
-    /* scroll animation */
     .fade {
       opacity: 0;
       transform: translateY(20px);
-      transition: all 0.8s ease;
+      transition: all 0.9s ease;
     }
 
     .fade.show {
@@ -150,9 +155,7 @@
     }
 
     @media (max-width: 800px) {
-      .hero {
-        grid-template-columns: 1fr;
-      }
+      .hero { grid-template-columns: 1fr; }
     }
   </style>
 </head>
@@ -164,7 +167,7 @@
     <section class="hero fade">
       <div>
         <h1>QUINCHO</h1>
-        <p>Producer / DJ. Analog textures, late-night sessions, finished ideas.</p>
+        <p>Producer / DJ. Finished music, late nights, analog emotion.</p>
       </div>
       <img src="quincho.jpg" alt="Quincho portrait">
     </section>
@@ -172,7 +175,10 @@
     <!-- SAMPLE PACK -->
     <section class="fade">
       <h2>Sample Pack</h2>
+
       <div class="card">
+        <img src="pack-cover.jpg" alt="Sample pack cover">
+
         <strong>Joaquin – Sample Pack Vol. 1</strong>
         <span class="price">$9.99 · WAV + MIDI</span>
 
@@ -186,40 +192,63 @@
       </div>
     </section>
 
-    <!-- COMPLETE CATALOG -->
+    <!-- COMPLETE COLLECTION -->
     <section class="fade">
-      <h2>Complete Catalog (49 Songs + Videos)</h2>
+      <h2>Complete Music Collection</h2>
       <p>
-        Full discography bundle. 49 released songs + selected music videos.
-        Delivered as a single ZIP.
+        Entire Quincho catalog. 49 songs + selected music videos.
+        Delivered as one ZIP.
       </p>
 
       <div class="card">
-        <strong>Quincho – Complete Collection</strong>
-        <span class="price">$39 · ZIP Download</span>
+        <img src="catalog-cover.jpg" alt="Music collection cover">
 
-        <a href="PUT_GUMROAD_ZIP_LINK_HERE" target="_blank">
-          <button>Buy Full Catalog</button>
+        <strong>Quincho – Complete Collection</strong>
+        <span class="price">$9.99 · ZIP Download</span>
+
+        <a href="https://delaguardia.gumroad.com/l/joaquincollection" target="_blank">
+          <button>Buy Full Collection</button>
         </a>
+      </div>
+    </section>
+
+    <!-- VIDEOS -->
+    <section class="fade">
+      <h2>Selected Videos</h2>
+
+      <div class="video-grid">
+        <div class="video">
+          <iframe src="https://www.youtube.com/embed/qnSpZFalGyc" allowfullscreen></iframe>
+        </div>
+        <div class="video">
+          <iframe src="https://www.youtube.com/embed/kBgTyAIZTq0" allowfullscreen></iframe>
+        </div>
+        <div class="video">
+          <iframe src="https://www.youtube.com/embed/wsHI4iYOxJA" allowfullscreen></iframe>
+        </div>
+        <div class="video">
+          <iframe src="https://www.youtube.com/embed/HooUcyI-OU0" allowfullscreen></iframe>
+        </div>
+        <div class="video">
+          <iframe src="https://www.youtube.com/embed/qaP6ksXHvkM" allowfullscreen></iframe>
+        </div>
       </div>
     </section>
 
     <!-- EMAIL -->
     <section class="fade">
-      <h2>Stay Connected</h2>
-      <p>Get early access to new drops and unreleased material.</p>
+      <h2>Mailing List</h2>
+      <p>Early access to new drops and exclusive bundles.</p>
 
-      <div class="email-box">
-        <form action="https://formsubmit.co/bsentholdings@gmail.com" method="POST">
-          <input type="email" name="email" placeholder="your@email.com" required>
-          <button type="submit">Join Mailing List</button>
-        </form>
-      </div>
+      <form action="https://formsubmit.co/bsentholdings@gmail.com" method="POST">
+        <input type="email" name="email" placeholder="your@email.com" required>
+        <button type="submit">Join Mailing List</button>
+      </form>
     </section>
 
     <!-- SOCIALS -->
     <section class="fade">
-      <h2>Online</h2>
+      <h2>Connect</h2>
       <div class="socials">
         <a href="https://instagram.com/quinchomusic" target="_blank">Instagram</a>
         <a href="https://tiktok.com/@quinchomusic" target="_blank">TikTok</a>
