added spotify and apple music

--- a/index.html
+++ b/index.html
@@ -271,6 +271,12 @@
       <h2>Connect</h2>
 
       <div class="connect">
+        <a href="https://open.spotify.com/artist/51FEMYGwPrDBRaHO7HyIcq" target="_blank">
+          <span class="icon">🟢</span> Spotify
+        </a>
+        <a href="https://music.apple.com/us/artist/joaquin/1832623241" target="_blank">
+          <span class="icon">🍎</span> Apple Music
+        </a>
         <a href="https://instagram.com/quinchomusic" target="_blank">
           <span class="icon">📸</span> Instagram
         </a>
