quitar palmeras y bandera
ideas de samu

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     <section class="hero fade">
       <div>
         <h1>QUINCHO</h1>
-        <p>Producer / DJ 🌴🇵🇦</p>
+        <p>Producer / DJ</p>
       </div>
       <img src="quincho.jpg" alt="Quincho portrait">
     </section>
