fix minor errrors

--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
     <!-- COMPLETE COLLECTION -->
     <section class="fade">
       <h2>Complete Music Collection</h2>
-      <p>Entire Quincho catalog. 49 songs + selected music videos.</p>
+      <p>Entire Joaquin catalog. 49 songs + selected music videos.</p>
 
       <div class="card">
         <img src="catalog-cover.jpg">
 
-        <strong>Quincho – Complete Collection</strong>
+        <strong>Joaquin – Complete Collection</strong>
         <span class="price">$9.99 · ZIP Download</span>
 
         <audio controls>
