--- a/index.html
+++ b/index.html
@@ -277,6 +277,9 @@
         <a href="https://music.apple.com/us/artist/joaquin/1832623241" target="_blank">
           <span class="icon">🍎</span> Apple Music
         </a>
+        <a href="https://soundcloud.com/joaquinsounds" target="_blank">
+          <span class="icon">☁️</span> SoundCloud
+        </a>
         <a href="https://instagram.com/quinchomusic" target="_blank">
           <span class="icon">📸</span> Instagram
         </a>
