--- a/index.html
+++ b/index.html
@@ -1,289 +1,357 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Saltwater EP – Quincho</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8" />
+<title>Quincho</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;600&display=swap" rel="stylesheet">
 
-  <style>
-    * { box-sizing: border-box; }
+<style>
+* { box-sizing: border-box; }
 
-    body {
-      margin: 0;
-      font-family: "Space Grotesk", sans-serif;
-      background: #0b0b0b;
-      color: #f1f1f1;
-      line-height: 1.6;
-      letter-spacing: 0.3px;
-    }
+body {
+  margin: 0;
+  font-family: "Space Grotesk", sans-serif;
+  background: #0b0b0b;
+  color: #f1f1f1;
+  line-height: 1.6;
+  letter-spacing: 0.3px;
+}
 
-    body::after {
-      content: "";
-      position: fixed;
-      inset: 0;
-      background: url("grain.png");
-      opacity: 0.06;
-      pointer-events: none;
-      z-index: 999;
-    }
+body::after {
+  content: "";
+  position: fixed;
+  inset: 0;
+  background: url("grain.png");
+  opacity: 0.06;
+  pointer-events: none;
+  z-index: 999;
+}
 
-    .container {
-      max-width: 1100px;
-      margin: auto;
-      padding: 80px 20px;
-    }
+.container {
+  max-width: 1100px;
+  margin: auto;
+  padding: 80px 20px;
+}
 
-    h1 {
-      font-size: 64px;
-      letter-spacing: 6px;
-      margin-bottom: 10px;
-    }
+h1 {
+  font-size: 56px;
+  letter-spacing: 4px;
+  margin-bottom: 10px;
+}
 
-    h2 {
-      margin-top: 90px;
-      margin-bottom: 30px;
-      font-weight: 400;
-    }
+h2 {
+  margin-top: 90px;
+  margin-bottom: 30px;
+  font-weight: 400;
+}
 
-    p { opacity: 0.75; }
+p { opacity: 0.75; }
 
-    /* EP HERO */
-    .ep-hero {
-      display: grid;
-      grid-template-columns: 1.2fr 1fr;
-      gap: 50px;
-      align-items: center;
-      min-height: 85vh;
-    }
+.hero {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+  align-items: center;
+}
 
-    .ep-hero img {
-      width: 100%;
-      border-radius: 14px;
-    }
+.hero img {
+  width: 100%;
+  border-radius: 12px;
+}
 
-    .ep-meta span {
-      display: block;
-      opacity: 0.6;
-      letter-spacing: 2px;
-      margin-bottom: 12px;
-    }
+/* EP PROMO */
+.ep-promo {
+  display: grid;
+  grid-template-columns: 1.2fr 1fr;
+  gap: 50px;
+  align-items: center;
+  min-height: 90vh;
+}
 
-    .ep-meta h1 {
-      margin: 0;
-    }
+.ep-promo img {
+  width: 100%;
+  border-radius: 14px;
+}
 
-    .ep-actions {
-      margin-top: 30px;
-      display: flex;
-      gap: 14px;
-      flex-wrap: wrap;
-    }
+.ep-promo span {
+  letter-spacing: 2px;
+  opacity: 0.6;
+}
 
-    .ep-actions a {
-      text-decoration: none;
-    }
+.ep-actions {
+  margin-top: 25px;
+  display: flex;
+  gap: 14px;
+  flex-wrap: wrap;
+}
 
-    .ep-actions button {
-      padding: 14px 26px;
-      border-radius: 40px;
-      border: none;
-      cursor: pointer;
-      font-weight: 600;
-      letter-spacing: 1px;
-    }
+.ep-actions a {
+  text-decoration: none;
+}
 
-    .primary {
-      background: #f1f1f1;
-      color: #0b0b0b;
-    }
+.ep-actions button {
+  padding: 14px 26px;
+  border-radius: 40px;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
 
-    .secondary {
-      background: transparent;
-      color: #f1f1f1;
-      border: 1px solid #333;
-    }
+.primary {
+  background: #f1f1f1;
+  color: #0b0b0b;
+}
 
-    audio {
-      width: 100%;
-      margin-top: 20px;
-    }
+.secondary {
+  background: transparent;
+  color: #f1f1f1;
+  border: 1px solid #333;
+}
 
-    /* EXISTING STYLES */
-    .hero {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 40px;
-      align-items: center;
-    }
+.card {
+  border: 1px solid #222;
+  padding: 28px;
+  border-radius: 12px;
+  background: rgba(255,255,255,0.015);
+  max-width: 420px;
+}
 
-    .hero img {
-      width: 100%;
-      border-radius: 12px;
-    }
+.card img {
+  width: 100%;
+  border-radius: 8px;
+  margin-bottom: 15px;
+}
 
-    .card {
-      border: 1px solid #222;
-      padding: 28px;
-      border-radius: 12px;
-      background: rgba(255,255,255,0.015);
-      max-width: 420px;
-    }
+.price {
+  opacity: 0.6;
+  display: block;
+  margin: 8px 0 14px;
+}
 
-    .card img {
-      width: 100%;
-      border-radius: 8px;
-      margin-bottom: 15px;
-    }
+audio {
+  width: 100%;
+  margin: 15px 0;
+}
 
-    .price {
-      opacity: 0.6;
-      display: block;
-      margin: 8px 0 14px;
-    }
+button {
+  width: 100%;
+  background: #f1f1f1;
+  color: #0b0b0b;
+  border: none;
+  padding: 14px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  cursor: pointer;
+}
 
-    button:hover { opacity: 0.85; }
+button:hover { opacity: 0.85; }
 
-    .connect {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-    }
+.connect {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+}
 
-    .connect a {
-      border: 1px solid #222;
-      padding: 18px;
-      border-radius: 12px;
-      display: flex;
-      align-items: center;
-      gap: 14px;
-      opacity: 0.7;
-      text-decoration: none;
-      color: inherit;
-      transition: all 0.3s ease;
-    }
+.connect a {
+  border: 1px solid #222;
+  padding: 18px;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  opacity: 0.7;
+  text-decoration: none;
+  color: inherit;
+  transition: all 0.3s ease;
+}
 
-    .connect a:hover {
-      opacity: 1;
-      background: rgba(255,255,255,0.04);
-    }
+.connect a:hover {
+  opacity: 1;
+  background: rgba(255,255,255,0.04);
+}
 
-    .icon {
-      font-size: 22px;
-      width: 30px;
-      text-align: center;
-    }
+.icon {
+  font-size: 22px;
+  width: 30px;
+  text-align: center;
+}
 
-    .video-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 30px;
-    }
+input[type="email"] {
+  width: 100%;
+  padding: 12px;
+  margin-bottom: 10px;
+  background: #111;
+  border: 1px solid #222;
+  color: #fff;
+}
 
-    .video {
-      position: relative;
-      padding-top: 56.25%;
-      border-radius: 12px;
-      overflow: hidden;
-      border: 1px solid #222;
-    }
+.video-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px;
+}
 
-    .video iframe {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-    }
+.video {
+  position: relative;
+  padding-top: 56.25%;
+  border-radius: 12px;
+  overflow: hidden;
+  border: 1px solid #222;
+}
 
-    footer {
-      margin-top: 120px;
-      font-size: 13px;
-      opacity: 0.4;
-    }
+.video iframe {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+}
 
-    .fade {
-      opacity: 0;
-      transform: translateY(20px);
-      transition: all 0.9s ease;
-    }
+footer {
+  margin-top: 120px;
+  font-size: 13px;
+  opacity: 0.4;
+}
 
-    .fade.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
+.fade {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: all 0.9s ease;
+}
 
-    @media (max-width: 800px) {
-      .ep-hero { grid-template-columns: 1fr; }
-      h1 { font-size: 46px; }
-    }
-  </style>
+.fade.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+@media (max-width: 800px) {
+  .hero,
+  .ep-promo {
+    grid-template-columns: 1fr;
+  }
+}
+</style>
 </head>
 
 <body>
-  <div class="container">
+<div class="container">
 
-    <!-- EP LANDING HERO -->
-    <section class="ep-hero fade">
-      <div class="ep-meta">
-        <span>NEW EP</span>
-        <h1>SALTWATER</h1>
-        <p>6-track EP by Quincho. Afro / melodic house.</p>
-        <p>Out February 20.</p>
+<!-- EP PROMO (ADDED ONLY) -->
+<section class="ep-promo fade">
+  <div>
+    <span>NEW EP</span>
+    <h1>SALTWATER</h1>
+    <p>6-track EP. Afro / melodic house.</p>
+    <p>Out February 20.</p>
 
-        <audio controls>
-          <source src="saltwater-preview.mp3" type="audio/mpeg">
-        </audio>
+    <audio controls>
+      <source src="saltwater-preview.mp3" type="audio/mpeg">
+    </audio>
 
-        <div class="ep-actions">
-          <a href="https://open.spotify.com/artist/51FEMYGwPrDBRaHO7HyIcq" target="_blank">
-            <button class="primary">Listen on Spotify</button>
-          </a>
-          <a href="#connect">
-            <button class="secondary">All Platforms</button>
-          </a>
-        </div>
-      </div>
-
-      <img src="saltwater-cover.jpg" alt="Saltwater EP cover">
-    </section>
-
-    <!-- ORIGINAL CONTENT CONTINUES -->
-
-    <section class="hero fade">
-      <div>
-        <h2>Quincho</h2>
-        <p>Producer / DJ</p>
-      </div>
-      <img src="quincho.jpg" alt="Quincho portrait">
-    </section>
-
-    <!-- CONNECT -->
-    <section class="fade" id="connect">
-      <h2>Connect</h2>
-
-      <div class="connect">
-        <a href="https://open.spotify.com/artist/51FEMYGwPrDBRaHO7HyIcq" target="_blank"><span class="icon">🟢</span>Spotify</a>
-        <a href="https://music.apple.com/us/artist/joaquin/1832623241" target="_blank"><span class="icon">🍎</span>Apple Music</a>
-        <a href="https://soundcloud.com/joaquinsounds" target="_blank"><span class="icon">☁️</span>SoundCloud</a>
-        <a href="https://instagram.com/quinchomusic" target="_blank"><span class="icon">📸</span>Instagram</a>
-        <a href="https://tiktok.com/@quinchomusic" target="_blank"><span class="icon">🎵</span>TikTok</a>
-        <a href="https://youtube.com/@joaquinsounds" target="_blank"><span class="icon">▶️</span>YouTube</a>
-      </div>
-    </section>
-
-    <footer>© Quincho</footer>
+    <div class="ep-actions">
+      <a href="https://open.spotify.com/artist/51FEMYGwPrDBRaHO7HyIcq" target="_blank">
+        <button class="primary">Listen on Spotify</button>
+      </a>
+      <a href="#connect">
+        <button class="secondary">All Platforms</button>
+      </a>
+    </div>
   </div>
 
-  <script>
-    const fades = document.querySelectorAll(".fade");
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(entry => {
-        if (entry.isIntersecting) entry.target.classList.add("show");
-      });
-    }, { threshold: 0.2 });
+  <img src="saltwater-cover.jpg" alt="Saltwater EP cover">
+</section>
 
-    fades.forEach(fade => observer.observe(fade));
-  </script>
+<!-- HERO -->
+<section class="hero fade">
+  <div>
+    <h1>QUINCHO</h1>
+    <p>Producer / DJ</p>
+  </div>
+  <img src="quincho.jpg" alt="Quincho portrait">
+</section>
+
+<!-- SAMPLE PACK -->
+<section class="fade">
+<h2>Sample Pack</h2>
+<div class="card">
+<img src="pack-cover.jpg">
+<strong>Joaquin – Sample Pack Vol. 1</strong>
+<span class="price">$9.99 · WAV + MIDI</span>
+<audio controls>
+<source src="sample-pack-preview.mp3" type="audio/mpeg">
+</audio>
+<a href="https://delaguardia.gumroad.com/l/jspv1" target="_blank">
+<button>Buy Sample Pack</button>
+</a>
+</div>
+</section>
+
+<!-- COMPLETE COLLECTION -->
+<section class="fade">
+<h2>Complete Music Collection</h2>
+<p>Entire Joaquin catalog. 49 songs + selected music videos.</p>
+<div class="card">
+<img src="catalog-cover.jpg">
+<strong>Joaquin – Complete Collection</strong>
+<span class="price">$9.99 · ZIP Download</span>
+<audio controls>
+<source src="Capaz (Joaquin Afro Remix).mp3" type="audio/mpeg">
+</audio>
+<a href="https://delaguardia.gumroad.com/l/joaquincollection" target="_blank">
+<button>Buy Full Collection</button>
+</a>
+</div>
+</section>
+
+<!-- VIDEOS -->
+<section class="fade">
+<h2>Selected Videos</h2>
+<div class="video-grid">
+<div class="video"><iframe src="https://www.youtube.com/embed/kBgTyAIZTq0" allowfullscreen></iframe></div>
+<div class="video"><iframe src="https://www.youtube.com/embed/wsHI4iYOxJA" allowfullscreen></iframe></div>
+<div class="video"><iframe src="https://www.youtube.com/embed/HooUcyI-OU0" allowfullscreen></iframe></div>
+<div class="video"><iframe src="https://www.youtube.com/embed/qaP6ksXHvkM" allowfullscreen></iframe></div>
+</div>
+</section>
+
+<!-- EMAIL -->
+<section class="fade">
+<h2>Mailing List</h2>
+<form action="https://formsubmit.co/bsentholdings@gmail.com" method="POST">
+<input type="email" name="email" placeholder="your@email.com" required>
+<button type="submit">Join Mailing List</button>
+</form>
+</section>
+
+<!-- CONNECT -->
+<section class="fade" id="connect">
+<h2>Connect</h2>
+<div class="connect">
+<a href="https://open.spotify.com/artist/51FEMYGwPrDBRaHO7HyIcq" target="_blank"><span class="icon">🟢</span>Spotify</a>
+<a href="https://music.apple.com/us/artist/joaquin/1832623241" target="_blank"><span class="icon">🍎</span>Apple Music</a>
+<a href="https://soundcloud.com/joaquinsounds" target="_blank"><span class="icon">☁️</span>SoundCloud</a>
+<a href="https://instagram.com/quinchomusic" target="_blank"><span class="icon">📸</span>Instagram</a>
+<a href="https://tiktok.com/@quinchomusic" target="_blank"><span class="icon">🎵</span>TikTok</a>
+<a href="https://youtube.com/@joaquinsounds" target="_blank"><span class="icon">▶️</span>YouTube</a>
+<a href="mailto:bsentholdings@gmail.com"><span class="icon">✉️</span>Email</a>
+</div>
+</section>
+
+<footer>© Quincho</footer>
+
+</div>
+
+<script>
+const fades = document.querySelectorAll(".fade");
+const observer = new IntersectionObserver(entries => {
+  entries.forEach(entry => {
+    if (entry.isIntersecting) entry.target.classList.add("show");
+  });
+}, { threshold: 0.2 });
+fades.forEach(fade => observer.observe(fade));
+</script>
+
 </body>
 </html>
